examples/bedrockagentcore/namespaced/v1beta1/gatewaytarget.yaml
apiVersion: bedrockagentcore.aws.m.upbound.io/v1beta1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: bedrockagentcore/v1beta1/gatewaytarget
  labels:
    testing.upbound.io/example-name: gateway
  name: gatewaytarget-gateway
  namespace: upbound-system
spec:
  forProvider:
    region: us-west-2
    name: example-gateway
    authorizerType: AWS_IAM
    protocolType: MCP
    roleArnSelector:
      matchLabels:
        testing.upbound.io/example-name: bedrock-agentcore-gateway-role
